Fix frame builds section styles on mobile

--- a/themes/warframe/src/scss/frame-page/layout/_frame-builds-section.scss
+++ b/themes/warframe/src/scss/frame-page/layout/_frame-builds-section.scss
@@ -1,4 +1,5 @@
 .frame-builds-section {
 	background-color: #2e3141;
-	padding: 150px;
+	padding-top: 150px;
+	padding-bottom: 150px;
 }
